Implementing, testing and documenting endpoints for category CRUD
